force-app/main/default/objects/Account/fields/Average_Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Deposit_Balance__c</fullName>
    <label>Average Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>