force-app/main/default/objects/Account/fields/Avg_Application_Amount_Target__c.field-meta.xml
<CustomField>
    <fullName>Avg_Application_Amount_Target__c</fullName>
    <label>Avg. Application Amount Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>