force-app/main/default/objects/Account/fields/Bank_Director__c.field-meta.xml
<CustomField>
    <fullName>Bank_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Director</label>
    <type>Checkbox</type>
</CustomField>