force-app/main/default/objects/Account/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <label>Business Email</label>
    <type>Email</type>
    <description>Business email address (no standard business email field on Account)</description>
</CustomField>