force-app/main/default/objects/Account/fields/Business_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Home_Phone__c</fullName>
    <description>Business home phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Home Phone</label>
    <type>Phone</type>
</CustomField>