force-app/main/default/objects/Account/fields/Business_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Mobile_Phone__c</fullName>
    <label>Business Mobile Phone</label>
    <type>Phone</type>
    <description>Business mobile phone number</description>
</CustomField>