force-app/main/default/objects/Account/fields/Business_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_ID__c</fullName>
    <description>Federal Employer Identification Number (EIN). Encrypted for PII protection. Format: XX-XXXXXXX</description>
    <label>Business Tax ID (EIN)</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>