force-app/main/default/objects/Account/fields/Business_Tax_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_ID_Type__c</fullName>
    <label>Business Tax ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Employer Tax ID (EIN)</fullName>
                <default>true</default>
                <label>Federal Employer Tax ID (EIN)</label>
            </value>
            <value>
                <fullName>Foreign Tax ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of business tax ID</description>
</CustomField>