force-app/main/default/objects/Account/fields/Business_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Work_Phone__c</fullName>
    <description>Business work phone number (primary phone)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Work Phone</label>
    <type>Phone</type>
</CustomField>