force-app/main/default/objects/Account/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual checkbox field used by Cash Management to override the rollup field used to condition the Cash Management alert banner on Account and Household lightning pages.</description>
    <inlineHelpText>Check this box to manually override the conditions triggering the Cash Management alert banner on Account and Household pages for Accounts/Households that do not have active Cash Management services but are managed by Cash Management.</inlineHelpText>
    <label>Cash Management</label>
    <type>Checkbox</type>
</CustomField>