force-app/main/default/objects/Account/fields/Corporator__c.field-meta.xml
<CustomField>
    <fullName>Corporator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporator</label>
    <type>Checkbox</type>
</CustomField>