force-app/main/default/objects/Account/fields/Create_Household__c.field-meta.xml
<CustomField>
    <fullName>Create_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Household</label>
    <type>Checkbox</type>
</CustomField>