force-app/main/default/objects/Account/fields/Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formula__c</fullName>
    <formula>(NOW() - CreatedDate) &lt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Formula</label>
    <type>Checkbox</type>
</CustomField>