force-app/main/default/objects/Account/fields/Customer_Insights__c.field-meta.xml
<CustomField>
    <fullName>Customer_Insights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Insights</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>