force-app/main/default/objects/Account/fields/Customer_Insights_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Insights_Last_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Insights Last Updated</label>
    <type>DateTime</type>
</CustomField>