force-app/main/default/objects/Account/fields/DAOBusinessId__c.field-meta.xml
<CustomField>
    <fullName>DAOBusinessId__c</fullName>
    <externalId>true</externalId>
    <label>DAO Business ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <description>External ID from  for Business Account. Used for upsert operations and deduplication.</description>
</CustomField>