force-app/main/default/objects/Account/fields/Days_Since_Last_Courtesy_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Courtesy_Rebate__c</fullName>
    <formula>today() -  Last_Courtesy_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Courtesy Rebate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>