force-app/main/default/objects/Account/fields/Dealer_Id__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Id__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>Dealer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>