force-app/main/default/objects/Account/fields/Dealership_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Monthly_Volume__c</fullName>
    <label>Dealership Monthly Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>