force-app/main/default/objects/Account/fields/Dealership_Reputation__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Reputation__c</fullName>
    <label>Dealership Reputation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>