force-app/main/default/objects/Account/fields/Dealership_Reputation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Reputation_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Dealership Reputation Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>