force-app/main/default/objects/Account/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do Not Solicit encompasses Do Not Call and Do Not Email</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>