force-app/main/default/objects/Account/fields/EIN_Tax_Id_Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>EIN_Tax_Id_Last_Four_Digits__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>EIN/Tax Id (Last Four Digits)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>