force-app/main/default/objects/Account/fields/Employee_Account__c.field-meta.xml
<CustomField>
    <fullName>Employee_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is an Employee Account</inlineHelpText>
    <label>Employee Account</label>
    <type>Checkbox</type>
</CustomField>