force-app/main/default/objects/Account/fields/Experience_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Experience_Last_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Experience Last Updated</label>
    <type>DateTime</type>
</CustomField>