force-app/main/default/objects/Account/fields/FinServ__Notes__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Notes__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Important Notes</label>
    <type>TextArea</type>
</CustomField>