force-app/main/default/objects/Account/fields/Franchise_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Dealer__c</fullName>
    <label>Franchise Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>