force-app/main/default/objects/Account/fields/Government_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Number__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Government ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>