force-app/main/default/objects/Account/fields/ID_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Expiration Date</label>
    <type>Date</type>
</CustomField>