force-app/main/default/objects/Account/fields/ID_Issuing_State__c.field-meta.xml
<CustomField>
    <fullName>ID_Issuing_State__c</fullName>
    <description>State that issued the government ID. Conditional on Country=USA</description>
    <label>ID Issuing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>