force-app/main/default/objects/Account/fields/Integration_Check__c.field-meta.xml
<CustomField>
    <fullName>Integration_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Check</label>
    <type>Checkbox</type>
</CustomField>