force-app/main/default/objects/Account/fields/Last_Courtesy_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Last_Courtesy_Rebate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Courtesy Rebate</label>
    <type>Date</type>
</CustomField>