force-app/main/default/objects/Account/fields/Legacy_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Legacy Account Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>