force-app/main/default/objects/Account/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <formula>AND(
TODAY() -  FinServ__LastTransactionDate__c  &lt;= 30,
Total_Number_of_Checking_Accounts__c &gt;= 1,
OR(
TODAY() - FinServ__RelationshipStartDate__c &gt; 3650,
FinServ__TotalBankDeposits__c  &gt; 100000
))</formula>
    <label>Loyalty Program</label>
    <type>Checkbox</type>
</CustomField>