force-app/main/default/objects/Account/fields/Monthly_Application_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Application_Actual__c</fullName>
    <label>Monthly Application Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>