force-app/main/default/objects/Account/fields/Monthly_Avg_Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Application_Amount__c</fullName>
    <inlineHelpText>This Months Average</inlineHelpText>
    <label>Avg. Application Amount Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>