force-app/main/default/objects/Account/fields/Monthly_Funded_Applications_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Funded_Applications_Target__c</fullName>
    <label>Monthly Funded Applications Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>