force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The North American Industry Classification System (NAICS) is the standard used by Federal statistical agencies in classifying business establishments for the purpose of collecting, analyzing, and publishing statistical data related to the U.S. business economy.</inlineHelpText>
    <label>NAICS Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>