force-app/main/default/objects/Account/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>NAICS Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>