force-app/main/default/objects/Account/fields/Officer_Number__c.field-meta.xml
<CustomField>
    <fullName>Officer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Officer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>