force-app/main/default/objects/Account/fields/Relationship_Banking__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual checkbox field used by Relationship Banking to override the rollup field used to condition the Relationship Banking alert banner on Account and Household lightning pages.</description>
    <inlineHelpText>Check this box to manually override the conditions triggering the Relationship Banking alert banner on Account and Household pages for Accounts/Households that do not have active Relationship Banking branch Financial Accounts but are managed by Relationship Banking.</inlineHelpText>
    <label>Relationship Banking</label>
    <type>Checkbox</type>
</CustomField>