force-app/main/default/objects/Account/fields/Seasonal_Address_End__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Address_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seasonal Address End</label>
    <type>Date</type>
</CustomField>