force-app/main/default/objects/Account/fields/Seasonal_Address_Start__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Address_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seasonal Address Start</label>
    <type>Date</type>
</CustomField>