force-app/main/default/objects/Account/fields/SSID_Set_by_User__c.field-meta.xml
<CustomField>
    <fullName>SSID_Set_by_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSID Set by User</label>
    <type>Checkbox</type>
</CustomField>