force-app/main/default/objects/Account/fields/SSN_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>SSN_Tax_Id__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>SSN/Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>