force-app/main/default/objects/Account/fields/SW_Active_Duty_Military__c.field-meta.xml
<CustomField>
    <fullName>SW_Active_Duty_Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Duty Military</label>
    <type>Checkbox</type>
</CustomField>