force-app/main/default/objects/Account/fields/SW_Average_Checking_Balance__c.field-meta.xml
<CustomField>
    <fullName>SW_Average_Checking_Balance__c</fullName>
    <label>Average Checking Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>