force-app/main/default/objects/Account/fields/SW_Average_Savings_Balance__c.field-meta.xml
<CustomField>
    <fullName>SW_Average_Savings_Balance__c</fullName>
    <label>Average Savings Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>