force-app/main/default/objects/Account/fields/SW_Business_Registration_State__c.field-meta.xml
<CustomField>
    <fullName>SW_Business_Registration_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Registration State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>