force-app/main/default/objects/Account/fields/SW_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>nonProfit</fullName>
                <label>Non-Profit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>