force-app/main/default/objects/Account/fields/SW_Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>SW_Citizenship_Status__c</fullName>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>usCitizen</fullName>
                <label>US Citizen</label>
            </value>
            <value>
                <fullName>residentAlien</fullName>
                <label>Resident Alien</label>
            </value>
            <value>
                <fullName>nonResidentAlien</fullName>
                <label>Non-Resident Alien</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>