force-app/main/default/objects/Account/fields/SW_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>SW_Customer_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SW Customer ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>