force-app/main/default/objects/Account/fields/SW_Date_Business_Established__c.field-meta.xml
<CustomField>
    <fullName>SW_Date_Business_Established__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Business Established</label>
    <type>Date</type>
</CustomField>