force-app/main/default/objects/Account/fields/SW_Different_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>SW_Different_Mailing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different Mailing Address</label>
    <type>Checkbox</type>
</CustomField>