force-app/main/default/objects/Account/fields/SW_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>SW_Doing_Business_As__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doing Business As</label>
    <length>100</length>
    <type>Text</type>
</CustomField>