force-app/main/default/objects/Account/fields/SW_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cCorp</fullName>
                <label>C Corporation</label>
            </value>
            <value>
                <fullName>llc</fullName>
                <label>Limited Liability Company (LLC)</label>
            </value>
            <value>
                <fullName>llp</fullName>
                <label>Limited Liability Partnership (LLP)</label>
            </value>
            <value>
                <fullName>partnership</fullName>
                <label>Partnership</label>
            </value>
            <value>
                <fullName>sCorp</fullName>
                <label>S Corporation</label>
            </value>
            <value>
                <fullName>soleProp</fullName>
                <label>Sole Proprietorship</label>
            </value>
            <value>
                <fullName>cooperative</fullName>
                <label>Co-operative</label>
            </value>
            <value>
                <fullName>employeeStockOwnershipPlan</fullName>
                <label>Employee Stock Ownership Program (ESOP)</label>
            </value>
            <value>
                <fullName>jointVenture</fullName>
                <label>Joint Venture</label>
            </value>
            <value>
                <fullName>independentContractors</fullName>
                <label>Independent Contractor(s)</label>
            </value>
            <value>
                <fullName>nonprofitChildcareCenter</fullName>
                <label>Non-Profit Childcare Center</label>
            </value>
            <value>
                <fullName>professionalAssociation</fullName>
                <label>Professional Association (PA)</label>
            </value>
            <value>
                <fullName>rolloverAsBusinessStartUps</fullName>
                <label>Rollover As Business Start-Ups</label>
            </value>
            <value>
                <fullName>tenantInCommon</fullName>
                <label>Tenants in Common</label>
            </value>
            <value>
                <fullName>trust</fullName>
                <label>Trust</label>
            </value>
            <value>
                <fullName>nonprofit</fullName>
                <label>Non-Profit</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>