force-app/main/default/objects/Account/fields/SW_Financial_Entry_Method__c.field-meta.xml
<CustomField>
    <fullName>SW_Financial_Entry_Method__c</fullName>
    <label>Financial Entry Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>operatingCompany</fullName>
            </value>
            <value>
                <fullName>bank</fullName>
            </value>
            <value>
                <fullName>hospital</fullName>
            </value>
            <value>
                <fullName>hotel</fullName>
            </value>
            <value>
                <fullName>insurance</fullName>
            </value>
            <value>
                <fullName>retail</fullName>
            </value>
            <value>
                <fullName>restaurant</fullName>
            </value>
            <value>
                <fullName>floorPlan</fullName>
            </value>
            <value>
                <fullName>ebitdaAddBack</fullName>
            </value>
            <value>
                <fullName>realEstateCompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>