force-app/main/default/objects/Account/fields/SW_ID_Description__c.field-meta.xml
<CustomField>
    <fullName>SW_ID_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>